<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cm730driver_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sgvandijk@gmail.com">sander</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>cm730driver_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>cm730driver_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
